# ibus-hangul

./: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
data/: Makefile.in
debian/: changelog  control  copyright  ibus-hangul.links  rules  watch
debian/patches/: 00list  01_engine.dpatch  ibus-1.4.patch  ibus14.patch  series
engine/: Makefile.in
icons/: Makefile.in
m4/: Makefile.in
po/: POTFILES.in  ibus-hangul.pot  ko.gmo  ko.po  zh_CN.gmo  zh_CN.po
setup/: Makefile.am  Makefile.in  config.py  config.py.in  hangul_keyboard_list.c  ibus-setup-hangul.desktop.in  ibus-setup-hangul.in  main.py  setup.ui
src/: Makefile.am  Makefile.in  engine.c  engine.h  hangul.xml.in  main.c
